--- a/css/styles.css
+++ b/css/styles.css
@@ -519,3 +519,220 @@ fill: #f4f4fd;
 .lifour:hover .stylishanduser {
     transform: translateY(0%);
 }
+
+
+
+.modal-overlay {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.4);
+    position: fixed;
+    top: 0;
+}
+
+.modal {
+    width: 408px;
+    height: 584px;
+    background-color:#FCFCFC;
+    border-radius: 4px;
+    position: absolute;
+    top: 80px;
+    left: 516px;
+    align-items: center;
+    justify-content: center;
+    padding: 72px 24px 24px 24px
+}
+
+.modal-close {
+background-color: #E7E9FC;
+border: 1px solid #0000001A;
+border-radius: 50%;
+position: absolute;
+width: 24px;
+height: 24px;
+top: 24px;
+right: 24px;
+}
+
+
+.modal-title {
+    font-weight: 500;
+        font-size: 16px;
+        line-height: 24px;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
+        list-style: none;
+        margin-bottom: 8px;
+        text-align: center;
+        margin-bottom: 16px
+
+}
+
+
+
+.modal-input {
+    width: 100%;
+    height: 40px;
+    border: 1px solid #2E2F4266;
+    background-color: #FCFCFC;
+    flex-shrink: 0;
+    border-radius: 4px;
+    padding-left: 38px;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    margin-bottom: 8px;
+}
+
+.modal-input:focus {
+    border-color: #4D5AE5;
+}
+
+.modal-input:focus + .modal_input_icon{
+    fill: #4D5AE5;
+}
+
+.modal_input_text {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 0.04em;
+    color: #8E8F99;
+    display: inline-block;
+    margin-bottom: 4px;
+}
+
+.modal_input_cover {
+    position: relative;
+}
+
+.modal_input_icon {
+    position: absolute;
+    left: 19px;
+    top: 50%;
+        transform: translateY(-50%);
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.buttonsubmit {
+    margin-top: 240px;
+}
+
+.modal__text-field {
+    width: 100%;
+    height: 120px;
+    border: 1px solid #2E2F4266;
+    background-color: #FCFCFC;
+    border-radius: 4px;
+    padding-left: 19px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    margin-bottom: 8px;
+    font-weight: 400;
+    font-size: 12px;
+    flex-shrink: 0;
+    outline: transparent;
+        resize: none;
+        padding: 8px 16px;
+}
+
+
+.buttonsubmit {
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    min-width: 169px;
+    height: 56px;
+    border-radius: 4px;
+    background-color: #4D5AE5;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    padding: 16px 32px;
+    margin: 0 auto;
+    display: block;
+    color: #FFFFFF;
+    text-align: center;
+    border: none;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    margin-top: 24px;
+    
+}
+
+.buttonsubmit:hover,
+.buttonsubmit:focus {
+    background-color: #404BBF}
+
+    .check-text{
+            font-weight:500;
+            font-size: 12px;
+            letter-spacing: 0.04em;
+            color: #8E8F99;
+            display: flex;
+            align-items: center;
+    }
+
+.check-element {
+width: 16px;
+height: 16px;
+border-radius: 2px;
+border: 1px solid #2E2F4266;
+margin-right: 12px;
+display: flex;
+align-items: center;
+justify-content: center;
+fill: transparent;
+
+}
+
+.modal_check:checked + .check-text .check-element {
+    background-color: #404BBF;
+    fill: #F4F4FD;
+}
+
+
+
+
+/* 
+        .modal__check-wrapper {
+            margin-bottom: 24px;
+        }
+    
+        .modal__check-input:checked+.modal__check-text .modal__check-box {
+            background-color: #404BBF;
+            border: none;
+            fill: var(--color-cloud);
+        }
+    
+        .modal__check-text {
+            color: var(--color-light-slate);
+            font-size: 12px;
+            line-height: 1.17;
+            letter-spacing: 0.04em;
+        }
+    
+        .modal__check-box {
+            width: 16px;
+            height: 16px;
+            border-radius: 2px;
+            border: 1px solid rgba(46, 47, 66, 0.4);
+            margin-right: 8px;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            fill: transparent;
+            transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+                border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+                fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+    
+        .modal__link-text {
+            margin-left: 4px;
+            color: var(--color-iris);
+            text-decoration: underline;
+            transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+    
+        .modal__link-text:hover,
+        .modal__link-text:focus {
+            color: var(--color-ocean);     } */
