--- a/css/styles.css
+++ b/css/styles.css
@@ -526,21 +526,26 @@ fill: #f4f4fd;
     width: 100%;
     height: 100%;
     background-color: rgba(46, 47, 66, 0.4);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     position: fixed;
     top: 0;
 }
 
 .modal {
-    width: 408px;
-    height: 584px;
-    background-color:#FCFCFC;
-    border-radius: 4px;
     position: absolute;
-    top: 80px;
-    left: 516px;
-    align-items: center;
-    justify-content: center;
-    padding: 72px 24px 24px 24px
+        top: 50%;
+        left: 50%;
+        transform: translateX(-50%) translateY(-50%);
+        width: 408px;
+        min-height: 584px;
+        border-radius: 4px;
+            box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14),
+                0px 1px 3px rgba(0, 0, 0, 0.12),
+                0px 2px 1px rgba(0, 0, 0, 0.2);
+            background-color: #fcfcfc;
+            transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        
+            padding: 72px 24px 24px 24px;
 }
 
 .modal-close {
