--- a/css/styles.css
+++ b/css/styles.css
@@ -557,9 +557,23 @@ width: 24px;
 height: 24px;
 top: 24px;
 right: 24px;
+display: flex;
+align-items: center;
+justify-content: center;
+padding: 0;
+cursor: pointer;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal-close:hover
+.modal-close:focus {
+    background-color: #404bbf;
+    border: none;
+}
 
+.modal-close-icon {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .modal-title {
     font-weight: 500;
         font-size: 16px;
