--- a/css/styles.css
+++ b/css/styles.css
@@ -574,6 +574,12 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cu
 .modal-close-icon {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.modal-close:hover .modal-close-icon
+.modal-close:focus .modal-close-icon {
+    fill: #ffffff
+}
+
 .modal-title {
     font-weight: 500;
         font-size: 16px;
@@ -587,6 +593,9 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cu
 
 }
 
+.divform {
+    margin-bottom: 8px;
+}
 
 
 .modal-input {
@@ -613,10 +622,10 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cu
 .modal_input_text {
     font-weight: 400;
     font-size: 12px;
-    line-height: 14px;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8E8F99;
-    display: inline-block;
+    display: block;
     margin-bottom: 4px;
 }
 
@@ -675,12 +684,14 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cu
     cursor: pointer;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     margin-top: 24px;
-    
+
 }
 
 .buttonsubmit:hover,
 .buttonsubmit:focus {
-    background-color: #404BBF}
+    background-color: #404BBF;
+    border: none;
+}
 
     .check-text{
             font-weight:500;
