--- a/css/styles.css
+++ b/css/styles.css
@@ -565,7 +565,7 @@ cursor: pointer;
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close:hover
+.modal-close:hover,
 .modal-close:focus {
     background-color: #404bbf;
     border: none;
@@ -602,7 +602,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cu
     width: 100%;
     height: 40px;
     border: 1px solid #2E2F4266;
-    background-color: #FCFCFC;
+    background-color: transparent;
     flex-shrink: 0;
     border-radius: 4px;
     padding-left: 38px;
@@ -720,49 +720,3 @@ fill: transparent;
     fill: #F4F4FD;
 }
 
-
-
-
-/* 
-        .modal__check-wrapper {
-            margin-bottom: 24px;
-        }
-    
-        .modal__check-input:checked+.modal__check-text .modal__check-box {
-            background-color: #404BBF;
-            border: none;
-            fill: var(--color-cloud);
-        }
-    
-        .modal__check-text {
-            color: var(--color-light-slate);
-            font-size: 12px;
-            line-height: 1.17;
-            letter-spacing: 0.04em;
-        }
-    
-        .modal__check-box {
-            width: 16px;
-            height: 16px;
-            border-radius: 2px;
-            border: 1px solid rgba(46, 47, 66, 0.4);
-            margin-right: 8px;
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            fill: transparent;
-            transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-                border 250ms cubic-bezier(0.4, 0, 0.2, 1),
-                fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        }
-    
-        .modal__link-text {
-            margin-left: 4px;
-            color: var(--color-iris);
-            text-decoration: underline;
-            transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        }
-    
-        .modal__link-text:hover,
-        .modal__link-text:focus {
-            color: var(--color-ocean);     } */
