--- a/css/styles.css
+++ b/css/styles.css
@@ -594,7 +594,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cu
 }
 
 .divform {
-    margin-bottom: 8px;
+    margin-bottom: 16px;
 }
 
 
@@ -635,7 +635,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cu
 
 .modal_input_icon {
     position: absolute;
-    left: 19px;
+    left: 16px;
     top: 50%;
         transform: translateY(-50%);
         transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -649,10 +649,13 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cu
 .modal__text-field {
     width: 100%;
     height: 120px;
-    border: 1px solid #2E2F4266;
+    border: 1px solid rgba(46, 47, 66, 0.4);
     background-color: #FCFCFC;
     border-radius: 4px;
     padding-left: 19px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     margin-bottom: 8px;
     font-weight: 400;
