--- a/css/styles.css
+++ b/css/styles.css
@@ -626,7 +626,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cu
     letter-spacing: 0.04em;
     color: #8E8F99;
     display: block;
-    margin-bottom: 4px;
+    margin-bottom: 16px;
 }
 
 .modal_input_cover {
@@ -650,7 +650,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cu
     width: 100%;
     height: 120px;
     border: 1px solid rgba(46, 47, 66, 0.4);
-    background-color: #FCFCFC;
+    background-color: transparent;
     border-radius: 4px;
     padding-left: 19px;
     line-height: 1.17;
@@ -665,6 +665,11 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cu
         resize: none;
         padding: 8px 16px;
 }
+
+.modal__text-field:focus {
+    border-color: #4D5AE5;
+}
+
 
 
 .buttonsubmit {
@@ -703,6 +708,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cu
             color: #8E8F99;
             display: flex;
             align-items: center;
+            line-height: 1.17;
     }
 
 .check-element {
@@ -711,15 +717,17 @@ height: 16px;
 border-radius: 2px;
 border: 1px solid #2E2F4266;
 margin-right: 12px;
-display: flex;
+display: inline-flex;
 align-items: center;
 justify-content: center;
 fill: transparent;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
 .modal_check:checked + .check-text .check-element {
     background-color: #404BBF;
     fill: #F4F4FD;
+    border: none;
 }
 
