--- a/css/styles.css
+++ b/css/styles.css
@@ -278,6 +278,7 @@ margin-bottom: 8px;
         background-color: #4D5AE5;
         border-radius: 50%;
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        
 }
 
 .teamlinkicon:hover,
@@ -575,7 +576,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cu
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close:hover .modal-close-icon
+.modal-close:hover .modal-close-icon,
 .modal-close:focus .modal-close-icon {
     fill: #ffffff
 }
@@ -626,7 +627,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cu
     letter-spacing: 0.04em;
     color: #8E8F99;
     display: block;
-    margin-bottom: 16px;
+    margin-bottom: 4px;
 }
 
 .modal_input_cover {
@@ -729,5 +730,14 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cu
     background-color: #404BBF;
     fill: #F4F4FD;
     border: none;
+}
+
+.divcheckbox {
+
+    margin-bottom: 24px;
+}
+
+.privacypolicy {
+    color: #4d5ae5;
 }
 
