--- a/css/styles.css
+++ b/css/styles.css
@@ -538,22 +538,43 @@ fill: #f4f4fd;
 }
 
 .footer-input:placeholder {
-    ont-weight: 400;
+    font-weight: 400;
     font-size: 12px;
     line-height: 24px;
     letter-spacing: 0.04em;
         
 }
 
+.container-footer__subscribe-wrapper {
+    margin-left: 80px; 
+}
+
+.footer__subscribe-text {
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+color: #FFFFFF;
+margin-bottom: 16px;
+}
+
+
 .footter-form {
     display: flex;
 }
 
 .footer-btn {
+    width: 165px;
+    height: 40px;
     border: none;
     background-color: #4D5AE5;
     color: #FFFFFF;
+    margin-left: 24px;
 }
+
+.footer-btn-text {
+padding-top: 8px;
+}
+
 
 .modal-overlay {
     width: 100%;
