--- a/css/styles.css
+++ b/css/styles.css
@@ -535,6 +535,11 @@ fill: #f4f4fd;
     border-radius: 4px;
     background-color: transparent;
     color: #FFFFFF;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    padding-left: 16px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .footer-input:placeholder {
@@ -560,15 +565,19 @@ margin-bottom: 16px;
 
 .footter-form {
     display: flex;
+    gap: 24px;
 }
 
 .footer-btn {
-    width: 165px;
+    min-width: 165px;
     height: 40px;
     border: none;
     background-color: #4D5AE5;
     color: #FFFFFF;
     margin-left: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .footer-btn-text {
