--- a/css/styles.css
+++ b/css/styles.css
@@ -582,6 +582,13 @@ margin-bottom: 16px;
 
 .footer-btn-text {
 padding-top: 8px;
+font-weight: 500;
+line-height: 1.5;
+letter-spacing: 0.04em;
+color: #ffffff;
+cursor: pointer;
+border-radius: 4px;
+
 }
 
 
