--- a/css/styles.css
+++ b/css/styles.css
@@ -782,7 +782,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cu
             font-size: 12px;
             letter-spacing: 0.04em;
             color: #8E8F99;
-            display: flex;
+            display: inline-flex;
             align-items: center;
             line-height: 1.17;
     }
@@ -798,7 +798,6 @@ align-items: center;
 justify-content: center;
 fill: transparent;
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
 .modal_check:checked + .check-text .check-element {
