--- a/css/styles.css
+++ b/css/styles.css
@@ -800,6 +800,10 @@ fill: transparent;
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.check-icon {
+    display: inline-flex; 
+}
+
 .modal_check:checked + .check-text .check-element {
     background-color: #404BBF;
     fill: #F4F4FD;
