--- a/css/styles.css
+++ b/css/styles.css
@@ -818,6 +818,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cu
 .privacypolicy {
     margin-left: 4px;
     color: #4d5ae5;
+    display: inline-flex;
 }
 
 
