--- a/css/styles.css
+++ b/css/styles.css
@@ -604,7 +604,7 @@ padding-top: 8px;
 }
 
 .modal {
-    position: absolute;
+    position: relative;
         top: 50%;
         left: 50%;
         transform: translateX(-50%) translateY(-50%);
@@ -793,7 +793,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cu
             fill: #F4F4FD;
             border: none;   }
 
-            
+
 .check-element {
 width: 16px;
 height: 16px;
@@ -814,7 +814,6 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cu
 
 
 .divcheckbox {
-
     margin-bottom: 24px;
 }
 
