--- a/css/styles.css
+++ b/css/styles.css
@@ -604,7 +604,7 @@ padding-top: 8px;
 }
 
 .modal {
-    position: relative;
+    position: absolute;
         top: 50%;
         left: 50%;
         transform: translateX(-50%) translateY(-50%);
@@ -782,7 +782,6 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cu
             font-size: 12px;
             letter-spacing: 0.04em;
             color: #8E8F99;
-            display: inline-flex;
             align-items: center;
             line-height: 1.17;
     }
