--- a/css/styles.css
+++ b/css/styles.css
@@ -665,7 +665,9 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cu
 
 }
 
-
+.divform {
+    margin-bottom: 8px;
+}
 
 .divformfour {
     margin-bottom: 16px;
@@ -682,7 +684,6 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cu
     padding-left: 38px;
     outline: transparent;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    margin-bottom: 8px;
 }
 
 .modal-input:focus {
@@ -821,4 +822,9 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cu
 footer-btn:hover,
 footer-btn:focus {
     background-color: #404BBF;
+}
+
+
+.divcheckbox {
+    margin-bottom: 24px;
 }
