--- a/css/styles.css
+++ b/css/styles.css
@@ -99,6 +99,10 @@ p, h1, h2, h3, h4, h5, h6 {
     list-style: none;
 }
 
+.header_menu_link.current  {
+    color: #404BBF;
+}
+
 .current::after {
     content: '' ;
     width: 100%;
@@ -542,12 +546,12 @@ fill: #f4f4fd;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
-.footer-input:placeholder {
+.footer-input::placeholder {
     font-weight: 400;
     font-size: 12px;
     line-height: 24px;
     letter-spacing: 0.04em;
-        
+    color: #FFFFFF;
 }
 
 .container-footer__subscribe-wrapper {
